<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:search="http://schemas.android.com/apk/com.tsinbei.pixelxpert.ui.preferencesearch">

	<PreferenceCategory
		android:key="search_category"
		android:layout="@layout/settingslib_preference_category_no_title">

		<com.tsinbei.pixelxpert.ui.preferences.preferencesearch.SearchPreference android:key="searchPreference" />

	</PreferenceCategory>

	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:key="personalization_category"
		android:title="@string/home_category_personalization"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.LockScreenFragment"
			app:icon="@drawable/ic_settings_lockscreen"
			app:key="lockscreen_header"
			app:summary="@string/lockscreen_header_summary"
			app:title="@string/lockscreen_header_title"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.LauncherFragment"
			app:icon="@drawable/ic_settings_launcher"
			app:key="launcher_header"
			app:summary="@string/launcher_header_summary"
			app:title="@string/launcher_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.ThemingFragment"
			app:icon="@drawable/ic_settings_themes"
			app:key="theming_header"
			app:summary="@string/theme_customization_summary"
			app:title="@string/theme_customization_category"
			search:ignore="true" />

	</com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:key="system_interface_category"
		android:title="@string/home_category_system_interface"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.QuickSettingsFragment"
			app:icon="@drawable/ic_settings_quicksettings"
			app:key="quicksettings_header"
			app:summary="@string/qs_panel_category_summary"
			app:title="@string/qs_panel_category_title"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.StatusbarFragment"
			app:icon="@drawable/ic_settings_statusbar"
			app:key="statusbar_header"
			app:summary="@string/statusbar_header_summary"
			app:title="@string/statusbar_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.NavFragment"
			app:icon="@drawable/ic_settings_navigation"
			app:key="nav_header"
			app:summary="@string/nav_header_summary"
			app:title="@string/nav_header"
			search:ignore="true" />

	</com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:key="app_enhancements_category"
		android:title="@string/home_category_app_enhancements"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.DialerFragment"
			app:icon="@drawable/ic_phone"
			app:key="dialer_header"
			app:summary="@string/dialer_header_summary"
			app:title="@string/dialer_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.GboardFragment"
			app:icon="@drawable/ic_keyboard"
			app:key="gboard_header"
			app:summary="@string/gboard_header_summary"
			app:title="@string/gboard_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.DocumentsUIFragment"
			app:icon="@drawable/ic_settings_files"
			app:key="documentsui_header"
			app:summary="@string/documentsui_header_summary"
			app:title="@string/documentsui_header"
			search:ignore="true" />

	</com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory
		android:key="system_tools_category"
		android:title="@string/home_category_system_tools"
		app:iconSpaceReserved="false"
		search:ignore="true">

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.HotSpotFragment"
			app:icon="@drawable/ic_settings_wifi_hotspot"
			app:key="hotspot_header"
			app:summary="@string/hotspot_header_summary"
			app:title="@string/hotspot_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.PackageManagerFragment"
			app:icon="@drawable/ic_settings_package_manager"
			app:key="pm_header"
			app:summary="@string/pm_header_summary"
			app:title="@string/pm_header"
			search:ignore="true" />

		<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
			android:layout="@layout/custom_preference"
			app:fragment="com.tsinbei.pixelxpert.ui.fragments.MiscFragment"
			app:icon="@drawable/ic_settings_misc"
			app:key="misc_header"
			app:summary="@string/misc_header_summary"
			app:title="@string/misc_header"
			search:ignore="true" />

	</com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceCategory>

	<!--	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain-->
	<!--		android:layout="@layout/custom_preference"-->
	<!--		app:fragment="com.tsinbei.pixelxpert.ui.fragments.OwnPrefsFragment"-->
	<!--		app:icon="@drawable/ic_settings_pixelxpert"-->
	<!--		app:key="own_header"-->
	<!--		app:title="@string/own_prefs_header"-->
	<!--		search:ignore="true" />-->

	<!-- Let's remove this for the time being...
	<com.tsinbei.pixelxpert.ui.preferences.MaterialPreferenceMain
		android:layout="@layout/custom_preference"
		app:fragment="com.tsinbei.pixelxpert.ui.fragments.ScreenOffFragment"
		app:key="doze_header"
		app:title="@string/doze_header"
		app:icon="@drawable/ic_settings_lockscreen"
		search:ignore="true" />
	-->
</PreferenceScreen>
